--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,23 +61,24 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.3.1'
     implementation 'com.google.android.material:material:1.4.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.0'
-
-    //viewModel
     implementation 'androidx.fragment:fragment-ktx:1.3.6'
     implementation 'androidx.activity:activity-ktx:1.3.1'
+    implementation "androidx.legacy:legacy-support-v4:1.0.0"
+
+    //viewModel, lifecycle
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.1'
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.3.1'
 
-    //internet
+    //internet: picasso, retrofit
     implementation "com.squareup.picasso:picasso:2.71828"
     implementation 'com.squareup.okhttp3:logging-interceptor:4.7.2'
     implementation "com.squareup.retrofit2:retrofit:2.9.0"
     implementation "com.squareup.retrofit2:converter-gson:2.9.0"
 
-    implementation "androidx.legacy:legacy-support-v4:1.0.0"
+    //rating bar
+    implementation 'me.zhanghai.android.materialratingbar:library:1.4.0'
 
     //test
-
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
